src/objects/Item_do_Plano__c.object
<CustomObject>
    <fields>
        <fullName>Acao__c</fullName>
        <label>Ação</label>
        <referenceTo>Acao__c</referenceTo>
        <relationshipLabel>Itens do Plano</relationshipLabel>
        <relationshipName>Itens_do_Plano</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plano_de_acao__c</fullName>
        <label>Plano de Ação</label>
        <referenceTo>Plano_de_acao__c</referenceTo>
        <relationshipLabel>Itens do Plano</relationshipLabel>
        <relationshipName>Itens_do_Plano</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Execução</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atrasado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalizado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Item do Plano</label>
    <nameField>
        <displayFormat>item-{0000}</displayFormat>
        <label>Nome de Item do Plano</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens do Plano</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>